--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.9",
+    "@react-google-maps/api": "^1.2.3-alpha.11",
     "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
