--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@date-io/moment": "^1.3.5",
     "@firebase/app-types": "^0.3.3",
     "@firebase/util": "^0.2.6",
     "@google-cloud/storage": "^2.3.4",
-    "@material-ui/core": "^3.9.1",
+    "@material-ui/core": "^4.0.0-beta.1",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.0.0-beta.1",
     "@material-ui/styles": "^3.0.0-alpha.9",
     "@react-google-maps/api": "^1.2.3-alpha.11",
     "@types/classnames": "^2.2.7",
@@ -20,11 +22,12 @@
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.0.0-beta.12",
     "es6-promise": "^4.2.5",
-    "firebase": "^5.8.2",
+    "firebase": "^6.0.2",
     "flatted": "^2.0.0",
     "grpc": "^1.18.0",
     "hls.js": "^0.12.2",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-cropper-image-editor": "^1.0.10",
     "react-dom": "^16.7.0",
