--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@date-io/core": "^1.2.0",
     "@date-io/moment": "^1.3.5",
     "@firebase/app-types": "^0.3.3",
     "@firebase/util": "^0.2.6",
     "@google-cloud/storage": "^2.3.4",
-    "@material-ui/core": "^4.0.0-beta.1",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/pickers": "^3.0.0-beta.1",
+    "@material-ui/pickers": "^3.0.0-rc.0",
     "@material-ui/styles": "^3.0.0-alpha.9",
     "@react-google-maps/api": "^1.2.3-alpha.11",
     "@types/classnames": "^2.2.7",
@@ -35,13 +36,12 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "request": "^2.34.0",
-    "typescript": "^3.2.4",
-    "webrtc-adapter": "^7.2.0"
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,12 +54,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "firebase-server": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-css-modules": "^1.1.0",
+    "jest": "^24.8.0",
+    "jest-css-modules": "^2.0.0",
     "react-test-renderer": "^16.8.0-alpha.1",
     "redux-devtools": "^3.5.0"
   },
