--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,13 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.2"
+    "@google-cloud/firestore": "^2.0.0",
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^2.3.1",
+    "firebase-functions-test": "^0.1.6"
+  },
+  "engines": {
+    "node": "10"
   },
   "private": true
 }
